# launcher

./: .eslintrc.cjs  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Auth/: AuthScreen.tsx
src/components/Character/: CharacterCreation.tsx
src/components/Common/: MusicPlayer.tsx  TitleBar.tsx
src/components/MainMenu/: MainLauncher.tsx  NewsSection.tsx  PlayButton.tsx  ServerInfo.tsx  ShopSection.tsx  Sidebar.tsx  VideoBackground.tsx
src/components/Settings/: Settings.tsx
src/styles/: globals.css
